--- a/app/src/main/res/layout/item_stagger.xml
+++ b/app/src/main/res/layout/item_stagger.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.wp.exposure.view.ExposureLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/exposureRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginRight="10dp"
@@ -22,4 +23,4 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#f00" />
-</LinearLayout>
+</com.wp.exposure.view.ExposureLinearLayout>
