--- a/app/src/main/res/layout/activity_stagger.xml
+++ b/app/src/main/res/layout/activity_stagger.xml
@@ -4,18 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.wp.exposure.ExposureRecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvStagger"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:exposure_threshold="500"
-        app:exposure_valid_area="0%"
-        app:spanCount="2"
         app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="2"
         tools:listitem="@layout/item_stagger" />
 </androidx.constraintlayout.widget.ConstraintLayout>
