新增对ViewGroup下子View进行曝光收集

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,5 +46,11 @@
         android:id="@+id/tvChildCanExposure"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="子View设置曝光数据的情况" />
+        android:text="RV里子View设置曝光数据的情况" />
+
+    <Button
+        android:id="@+id/tvCollectViewGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="收集ViewGroup子View曝光数据" />
 </LinearLayout>
