--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,12 @@
         android:text="列表布局" />
 
     <Button
+        android:id="@+id/tvListCover"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="列表布局有遮挡" />
+
+    <Button
         android:id="@+id/tvGrid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
