RV支持item子View曝光

--- a/app/src/main/res/layout/item_list1.xml
+++ b/app/src/main/res/layout/item_list1.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <com.wp.exposure.view.ExposureLinearLayout
         android:id="@+id/exposureRoot1"
@@ -26,25 +26,36 @@
             android:background="#f00" />
     </com.wp.exposure.view.ExposureLinearLayout>
 
-    <com.wp.exposure.view.ExposureLinearLayout
-        android:id="@+id/exposureRoot2"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvListText2"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="#9a9a9a"
-            android:gravity="center"
-            android:textColor="#fff"
-            tools:text="TEXT" />
+            android:layout_height="wrap_content">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#f00" />
-    </com.wp.exposure.view.ExposureLinearLayout>
+            <com.wp.exposure.view.ExposureLinearLayout
+                android:id="@+id/exposureRoot2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvListText2"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="#9a9a9a"
+                    android:gravity="center"
+                    android:textColor="#fff"
+                    tools:text="TEXT" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#f00" />
+            </com.wp.exposure.view.ExposureLinearLayout>
+        </FrameLayout>
+    </LinearLayout>
 
 </LinearLayout>
